# Apollo-WASM-Template

./: .gitignore  Cargo.toml  README.md
apollo-gateway/: index.js
backend/: .env  .env.example  Cargo.toml
backend/src/: lib.rs  main.rs  server.rs
backend/src/graphql_modules/: mod.rs  routes.rs  schema.rs
backend/src/graphql_modules/resolvers/: mod.rs  systemcheck.rs
