[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-web-lab = "0.15.0"
actix-cors = "0.6"
diesel = { version = "1.4.8", features = ["postgres", "uuid", "r2d2", "chrono", "numeric"] }
async-graphql = "3.0.35"
async-graphql-actix-web = "3.0.35"
actix-threadpool = "0.3.3"
env_logger = "0.9"
log = "0.4"
tokio = {version = "1.17.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1"
derive_more = "0.99.17"
dotenv = "0.15.0"
failure = "0.1.8"
diesel_migrations = "1.4.0"

[profile.release]
# Less code to include into binary
panic = 'abort'
# Optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# Optimization for size ( most aggressive )
opt-level = 'z'
# Link time optimization using using whole-program analysis
lto = true
debug =true
